--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,5 +1,11 @@
 
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <h3>I'm an AppComponent</h3> 
+            <hr>
+            <app-servers></app-servers>
+        </div>
+    </div>
+</div>
 
-<h3>I'm an AppComponent</h3> 
-<hr>
-<app-servers></app-servers>
