--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -4,7 +4,7 @@
         <div class="col-xs-12">
             <h3>I'm an AppComponent</h3> 
             <hr>
-            <app-servers></app-servers>
+            <div class="app-servers"></div>
         </div>
     </div>
 </div>
