--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,3 +1,11 @@
+<div class="col-xs-12">
+  <h3>I'm an AppComponent</h3> 
+  <hr>
+  <app-servers></app-servers>
+  <div class="app-servers"></div>
+</div>
+</div>
+</div>
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
