--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,3 +1,5 @@
+<div class="container">
+  <div class="row">
 <div class="col-xs-12">
   <h3>I'm an AppComponent</h3> 
   <hr>
@@ -20,6 +22,20 @@
       <hr>
       <app-warning-alert></app-warning-alert>
       <app-success-alert></app-success-alert>
+      <ol>
+        <li>Add a Input field which updates a property ('username') via Two-Way-Binding</li>
+        <li>Output the username property via String Interpolation (in a paragraph below the input)</li>
+        <li>Add a button which may only be clicked if the username is NOT an empty string</li>
+        <li>Upon clicking the button, the username should be reset to an empty string</li>
+      </ol>
+      <hr>
+      <label>Username</label>
+      <input type="text" class="form-control" [(ngModel)]="username">
+      <p>{{ username }}</p>
+      <button
+        class="btn btn-primary"
+        [disabled]="username === ''"
+        (click)="username = ''">Reset User</button>
     </div>
   </div>
 </div>
