--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -10,6 +10,8 @@ class="form-control"
 <p>{{ serverName }}</p>
 <button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Add Server</button>
 <!-- <p [innerText]="allowNewServer"></p> -->
-<p>{{ serverCreationStatus }}</p>
+<!-- <p>{{ serverCreationStatus }}</p> -->
+<p *ngIf="serverCreated; else noServer">Server was created, server names is {{ serverName }}</p>
+<ng-template #noServer><p>No server was created!</p></ng-template>
 <app-server></app-server>
 <app-server></app-server>
