--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -12,6 +12,6 @@ class="form-control"
 <!-- <p [innerText]="allowNewServer"></p> -->
 <!-- <p>{{ serverCreationStatus }}</p> -->
 <p *ngIf="serverCreated; else noServer">Server was created, server names is {{ serverName }}</p>
-<ng-template #noServer><p>No server was created!</p></ng-template>
+<!-- <ng-template #noServer><p>No server was created!</p></ng-template>  -->
 <app-server></app-server>
 <app-server></app-server>
