--- a/my-first-app/src/app/server/server.component.html
+++ b/my-first-app/src/app/server/server.component.html
@@ -1,1 +1,1 @@
-<p> {{ 'Server' }} Component with ID {{ serverId }} is {{ getserverStatus() }}</p>
+<p [ngStyle]="{backgroundcolor: getColor()}"> {{ 'Server' }} Component with ID {{ serverId }} is {{ getserverStatus() }}</p>
