--- a/recipebook/src/app/app.component.html
+++ b/recipebook/src/app/app.component.html
@@ -1,8 +1,8 @@
-
+<app-header></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h2>I'm working! I'm still working!</h2>
+      <h2>I'm working!</h2>
     </div>
   </div>
 </div>
