--- a/cms/src/app/contacts/contacts.component.html
+++ b/cms/src/app/contacts/contacts.component.html
@@ -1,1 +1,8 @@
-<p>contacts works!</p>
+<div class="row">
+    <div class="col-md-5">
+<h1>Contact List</h1>
+    </div>
+      <div class="col-md-4">
+<h1>Contact Detail</h1>
+      </div>
+    </div>
