--- a/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -1,1 +1,25 @@
-<p>contact-list works!</p>
+<div class="row">
+    <div class="align-middle col-xs-12">
+        <h2 class="pull-left">Contacts</h2>
+            <button class="btn btn-success pull-right">New Contact</button>
+    </div>
+</div>
+<hr>
+<!-- <div class="row">
+    <div class="col-xs-12">
+        <a href="#" class="list-group-item clearfix" 
+        *ngFor="let recipe of recipes">
+            <div class="pull-left">
+                <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
+                <p class="list-group-item-text">{{ recipe.description }}</p>
+            </div>
+            <span class="pull-right">
+                <img src="{{ recipe.imagePath }}" 
+                alt="{{ recipe.name }}" 
+                class="img-responsive" 
+                style="max-height: 50px;">           
+            </span>
+        </a>
+        <app-recipe-item></app-recipe-item>
+    </div>
+</div> -->
