--- a/cms/src/app/contacts/contacts.component.html
+++ b/cms/src/app/contacts/contacts.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-5">
-<h1>Contact List</h1>
+<cms-contact-list></cms-contact-list>
     </div>
       <div class="col-md-4">
 <h1>Contact Detail</h1>
