--- a/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -5,21 +5,20 @@
     </div>
 </div>
 <hr>
-<!-- <div class="row">
+<div class="row">
     <div class="col-xs-12">
         <a href="#" class="list-group-item clearfix" 
-        *ngFor="let recipe of recipes">
+        *ngFor="let contact of contacts">
             <div class="pull-left">
-                <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
-                <p class="list-group-item-text">{{ recipe.description }}</p>
+                <h4 class="list-group-item-heading">{{ contact.name }}</h4>
             </div>
             <span class="pull-right">
-                <img src="{{ recipe.imagePath }}" 
-                alt="{{ recipe.name }}" 
+                <img src="{{ contact.imageUrl }}" 
+                alt="{{ contact.name }}" 
                 class="img-responsive" 
                 style="max-height: 50px;">           
             </span>
         </a>
-        <app-recipe-item></app-recipe-item>
+        <!-- <app-recipe-item></app-recipe-item> -->
     </div>
-</div> -->
+</div>
