contat detail placed

--- a/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -1,10 +1,11 @@
+<div class="list-group-item clearfix">
 <div class="row">
     <div class="align-middle col-xs-12">
-        <h2 class="pull-left">Contacts</h2>
+        <h2 class="list-group-item-heading pull-left">Contacts</h2>
             <button class="btn btn-success pull-right">New Contact</button>
     </div>
 </div>
-<hr>
+</div>
 <div class="row">
     <div class="col-xs-12">
         <a href="#" class="list-group-item clearfix" 
