--- a/cms/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/cms/src/app/contacts/contact-detail/contact-detail.component.html
@@ -1,1 +1,31 @@
-<p>contact-detail works!</p>
+<div class="top-contact-detail list-group-item clearfix">
+<div class="row">
+    <div class="col-xs-12">
+        <h2>{{ contact.name }}</h2>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12 pull-left">
+        <img src="{{ contact.imageUrL }}" alt="{{ recipe.name }}" 
+        class="img-responsive" 
+        style="max-height: 50px;">
+    </div>
+    <div class="pull-right">
+        <div class="row">
+            <div class="col-xs-12">
+                <button class="btn btn-primary" type="submit">Edit</button>
+                <button class="btn btn-danger" type="submit">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+<div class="email-phone list-group-item clearfix">
+<div class="row">
+    <p><strong>Email:</strong></p><p>{{ contact.email }}</p>
+</div>
+<div class="row">
+    <p><strong>Phone:</strong></p><p>{{ contact.phone }}</p>
+</div>
+</div>
+
