--- a/cms/src/app/contacts/contacts.component.html
+++ b/cms/src/app/contacts/contacts.component.html
@@ -3,6 +3,10 @@
 <cms-contact-list></cms-contact-list>
     </div>
       <div class="col-md-4">
-<h1>Contact Detail</h1>
+        <div class="row">
+            <div class="col-md-12">
+                <cms-contact-detail></cms-contact-detail>
+            </div>
+          </div>
       </div>
     </div>
