removed the problem, plan to fix it later

--- a/cms/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/cms/src/app/contacts/contact-detail/contact-detail.component.html
@@ -1,12 +1,12 @@
 <div class="top-contact-detail list-group-item clearfix">
 <div class="row">
     <div class="col-xs-12">
-        <h2>{{ contact.name }}</h2>
+        <h2></h2>
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12 pull-left">
-        <img src="{{ contact.imageUrL }}" alt="{{ recipe.name }}" 
+        <img src="" alt="" 
         class="img-responsive" 
         style="max-height: 50px;">
     </div>
@@ -22,10 +22,10 @@
 </div>
 <div class="email-phone list-group-item clearfix">
 <div class="row">
-    <p><strong>Email:</strong></p><p>{{ contact.email }}</p>
+    <p><strong>Email:</strong></p><p></p>
 </div>
 <div class="row">
-    <p><strong>Phone:</strong></p><p>{{ contact.phone }}</p>
+    <p><strong>Phone:</strong></p><p></p>
 </div>
 </div>
 
