--- a/cmp-databinding-start/src/app/app.component.html
+++ b/cmp-databinding-start/src/app/app.component.html
@@ -10,7 +10,7 @@
       <button class="btn btn-danger" (click)="onDestroyFirst()">Destroy First Component</button>
       <app-server-element *ngFor-"let serverElement of serverElements" [element]="serverElement"
       [name]="serverElement.name">
-        <p>
+        <p #contentParagraph> 
           <strong *ngIf="serverElement.type === 'server'" style="color: red">{{ serverElement.content }}</strong>
           <em *ngIf="serverElement.type === 'blueprint'">{{ serverElement.content }}</em>
         </p>
