moved to item and moterized

--- a/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -8,7 +8,9 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <cms-contact-item *ngFor="let contact of contacts"></cms-contact-item>
+        <cms-contact-item 
+        *ngFor="let contact of contacts"
+        [contact]="contact"></cms-contact-item>
         <!-- <a href="#" class="list-group-item clearfix" 
         *ngFor="let contact of contacts">
             <div class="pull-left">
