click function works except phone #

--- a/cms/src/app/contacts/contacts.component.html
+++ b/cms/src/app/contacts/contacts.component.html
@@ -1,11 +1,15 @@
 <div class="row">
     <div class="col-md-5">
-<cms-contact-list></cms-contact-list>
+<cms-contact-list (selectedContactEvent)="selectedContact = $event"></cms-contact-list>
     </div>
       <div class="col-md-4">
         <div class="row">
             <div class="col-md-12">
-                <cms-contact-detail></cms-contact-detail>
+                <cms-contact-detail *ngIf="selectedContact; else infoText" 
+                [contact]="selectedContact"></cms-contact-detail>
+                <ng-template #infoText>
+                  <p>Please select a Contact</p>
+                </ng-template>
             </div>
           </div>
       </div>
