--- a/cms/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/cms/src/app/contacts/contact-detail/contact-detail.component.html
@@ -1,14 +1,14 @@
 <div class="top-contact-detail list-group-item clearfix">
 <div class="row">
     <div class="col-xs-12">
-        <h2></h2>
+        <h2>{{ contact.name }}</h2>
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12 pull-left">
-        <img src="" alt="" 
+        <img src="{{contact.imageUrl}}" alt="{{ contact.name }}" 
         class="img-responsive" 
-        style="max-height: 50px;">
+        style="max-height: 100px;">
     </div>
     <div class="pull-right">
         <div class="row">
@@ -22,10 +22,10 @@
 </div>
 <div class="email-phone list-group-item clearfix">
 <div class="row">
-    <p><strong>Email:</strong></p><p></p>
+    <p><strong>Email:</strong> {{ contact.email }}</p>
 </div>
 <div class="row">
-    <p><strong>Phone:</strong></p><p></p>
+    <p><strong>Phone:</strong> {{ contact.phone }}</p>
 </div>
 </div>
 
