--- a/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -10,7 +10,9 @@
     <div class="col-xs-12">
         <cms-contact-item 
         *ngFor="let contact of contacts"
-        [contact]="contact"></cms-contact-item>
+        [contact]="contact"
+        (click)="onSelected(contact)"
+        ></cms-contact-item>
         <!-- <a href="#" class="list-group-item clearfix" 
         *ngFor="let contact of contacts">
             <div class="pull-left">
