--- a/cms/src/app/documents/document-list/document-list.component.html
+++ b/cms/src/app/documents/document-list/document-list.component.html
@@ -1,1 +1,13 @@
-<p>document-list works!</p>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <div class="row pad-left-right">
+            <span class="pull-left title">Documents</span>
+            <a class="btn btn-success pull-right">Add Decument</a>
+        </div>
+    </div>
+    <div class="panel-body">
+        <div class="center-panel">
+            <cms-document-item></cms-document-item>
+        </div>
+    </div>
+</div>
