--- a/cms/src/app/messages/message-edit/message-edit.component.html
+++ b/cms/src/app/messages/message-edit/message-edit.component.html
@@ -9,7 +9,8 @@
                     id="subject"
                     class="form-control"
                     size="120"
-                    max="120">
+                    max="120"
+                    #subject>
                 </div>
                 <div class="col-sm-12 form-group">
                     <label for="message">Message</label>
@@ -18,13 +19,14 @@
                     id="message"
                     class="form-control"
                     size="120"
-                    max="255">
+                    max="255"
+                    #msgText>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <button class="btn btn-success" type="submit">Send</button>
-                    <button class="btn btn-danger" type="button">Clear</button>
+                    <button class="btn btn-success" type="submit" (click)="onSendMessage()">Send</button>
+                    <button class="btn btn-danger" type="button" (click)="onClear()">Clear</button>
                 </div>
             </div>
         </form>
