--- a/directives-start/src/app/app.component.html
+++ b/directives-start/src/app/app.component.html
@@ -6,9 +6,23 @@
         (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
       <br><br>
       <ul class="list-group">
-        <li
-          class="list-group-item">
+        <div *ngIf="onlyOdd">
+          <li
+          class="list-group-item"
+          *ngFor="let odd of oddNumbers"
+          >
+          {{ odd }}
         </li>
+        </div>
+       <div *ngIf="!onlyOdd">
+        <li
+        class="list-group-item"
+          *ngFor="let even of evenNumbers"
+          >
+          {{ odd }}
+        </li>
+       </div>
+        
       </ul>
       <ng-template [ngIf]="onlyOdd">
         <p>Only odd</p>
