--- a/directives-start/src/app/app.component.html
+++ b/directives-start/src/app/app.component.html
@@ -10,6 +10,8 @@
           <li
           class="list-group-item"
           *ngFor="let odd of oddNumbers"
+          [ngClass]="{odd: odd % 2 != 0}"
+          [ngStyle]="{backgroundColor: odd % 2 !== 0 ? 'yellow':'transparent'}"
           >
           {{ odd }}
         </li>
@@ -17,6 +19,8 @@
        <div *ngIf="!onlyOdd">
         <li
         class="list-group-item"
+        [ngClass]="{odd: even % 2 != 0}"
+        [ngStyle]="{backgroundColor: even % 2 !== 0 ? 'yellow':'transparent'}"
           *ngFor="let even of evenNumbers"
           >
           {{ odd }}
