creative a attribute directive

--- a/directives-start/src/app/app.component.html
+++ b/directives-start/src/app/app.component.html
@@ -28,9 +28,10 @@
        </div>
         
       </ul>
-      <ng-template [ngIf]="onlyOdd">
+      <!-- <ng-template [ngIf]="onlyOdd">
         <p>Only odd</p>
-      </ng-template>
+      </ng-template> -->
+      <p appBasicHighlight>Style me with basic directive!</p>
     </div>
   </div>
 </div>
