--- a/directives-start/src/app/app.component.html
+++ b/directives-start/src/app/app.component.html
@@ -23,7 +23,7 @@
         [ngStyle]="{backgroundColor: even % 2 !== 0 ? 'yellow':'transparent'}"
           *ngFor="let even of evenNumbers"
           >
-          {{ odd }}
+          {{ even }}
         </li>
        </div>
         
@@ -32,7 +32,7 @@
         <p>Only odd</p>
       </ng-template> -->
       <p appBasicHighlight>Style me with basic directive!</p>
-      <p appBetterHighlight>Style me with better directive!</p>
+      <p [appBetterHighlight]="'red'" defaultColor="yellow" >Style me with better directive!</p>
     </div>
   </div>
 </div>
