--- a/directives-start/src/app/app.component.html
+++ b/directives-start/src/app/app.component.html
@@ -16,7 +16,7 @@
           {{ odd }}
         </li>
         </div>
-       <div *ngIf="!onlyOdd">
+       <!-- <div *ngIf="!onlyOdd">
         <li
         class="list-group-item"
         [ngClass]="{odd: even % 2 != 0}"
@@ -37,7 +37,17 @@
             {{ even }}
           </li>
          </div>
-       </ng-template>
+       </ng-template> -->
+      <div *appUnless="onlyOdd">
+        <li
+        class="list-group-item"
+        [ngClass]="{odd: even % 2 != 0}"
+        [ngStyle]="{backgroundColor: even % 2 !== 0 ? 'yellow':'transparent'}"
+          *ngFor="let even of evenNumbers"
+          >
+          {{ even }}
+        </li>
+       </div>
         
       </ul>
       <!-- <ng-template [ngIf]="onlyOdd">
