--- a/recipebook/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/recipebook/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -15,7 +15,7 @@
             <span class="caret"></span></button>
             <ul class="dropdown-menu">
                 <li><a style="cursor: pointer;" (click)="onAddToShoppingList()" style="cursor: pointer;">To Shopping List</a></li>
-                <li><a style="cursor: pointer;">Edit Recipe</a></li>
+                <li><a style="cursor: pointer;" (click)="onEditRecipe()">Edit Recipe</a></li>
                 <li><a style="cursor: pointer;">Delete Recipe</a></li>
 
             </ul>
