Specify routed components are to be displayed

--- a/cms/src/app/app.component.html
+++ b/cms/src/app/app.component.html
@@ -1,10 +1,11 @@
-<cms-header (selectedFeatureEvent)="switchView($event)"></cms-header>
+<cms-header></cms-header>
 <div class="container pull-left">
+  <router-outlet></router-outlet>
     <div class="row">
       <div class="col-md-12">
-        <cms-documents *ngIf="selectedFeature === 'documents'"></cms-documents>
+        <!-- <cms-documents *ngIf="selectedFeature === 'documents'"></cms-documents>
         <cms-message-list *ngIf="selectedFeature === 'messages'"></cms-message-list>
-        <cms-contacts *ngIf="selectedFeature ==='contacts'"></cms-contacts>
+        <cms-contacts *ngIf="selectedFeature ==='contacts'"></cms-contacts> -->
       </div>
     </div>
     
