--- a/cms/src/app/header/header.component.html
+++ b/cms/src/app/header/header.component.html
@@ -5,9 +5,9 @@
         </div>
         <div class="collaps navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#" (click)="onSelected('documents')">Documents</a></li>
-                <li><a href="#" (click)="onSelected('messages')">Messages</a></li>
-                <li><a href="#" (click)="onSelected('contacts')">Contacts</a></li>
+                <li routerLinkActive="active"><a routerLink="documents">Documents</a></li>
+                <li routerLinkActive="active"><a routerLink="messages">Messages</a></li>
+                <li routerLinkActive="active"><a routerLink="contact">Contacts</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown" cmsDropdown>
