--- a/cms/src/app/documents/documents.component.html
+++ b/cms/src/app/documents/documents.component.html
@@ -3,8 +3,9 @@
         <cms-document-list></cms-document-list>
     </div>
     <div class="col-md-4">
-        <cms-document-detail *ngIf="selectedDocument; else infoText"
-        [document]="selectedDocument"></cms-document-detail>
+        <!-- <cms-document-detail *ngIf="selectedDocument; else infoText"
+        [document]="selectedDocument"></cms-document-detail> -->
+        <router-outlet></router-outlet>
         <ng-template #infoText>
         <p>Please select a Document</p>
         </ng-template>
