fixed single active link on docs

--- a/cms/src/app/documents/document-list/document-list.component.html
+++ b/cms/src/app/documents/document-list/document-list.component.html
@@ -10,7 +10,7 @@
         <cms-document-item
         *ngFor="let document of documents"
         [document]="document"
-        (click)="onSelectedDocument(document)"></cms-document-item>
+        ></cms-document-item>
       </div>
     </div>
   
