contact detail isny working

--- a/cms/src/app/contacts/contacts.component.html
+++ b/cms/src/app/contacts/contacts.component.html
@@ -5,8 +5,9 @@
       <div class="col-md-4">
         <div class="row">
             <div class="col-md-12">
-                <cms-contact-detail *ngIf="selectedContact; else infoText" 
-                [contact]="selectedContact"></cms-contact-detail>
+              <router-outlet></router-outlet>
+                <!-- <cms-contact-detail *ngIf="selectedContact; else infoText" 
+                [contact]="selectedContact"></cms-contact-detail> -->
                 <ng-template #infoText>
                   <p>Please select a Contact</p>
                 </ng-template>
