--- a/cms/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/cms/src/app/contacts/contact-detail/contact-detail.component.html
@@ -6,15 +6,15 @@
 </div>
 <div class="row">
     <div class="col-xs-12 pull-left">
-        <img src="{{contact.imageUrl}}" alt="{{ contact.name }}" 
+        <img src="{{contact?.imageUrl}}" alt="{{ contact?.name }}" 
         class="img-responsive" 
         style="max-height: 100px;">
     </div>
     <div class="pull-right">
         <div class="row">
             <div class="col-xs-12">
-                <button class="btn btn-primary" type="submit">Edit</button>
-                <button class="btn btn-danger" type="submit">Delete</button>
+                <a [routerLink]="['edit']" class="btn btn-primary" type="submit">Edit</a>
+                <a class="btn btn-danger" type="submit">Delete</a>
             </div>
         </div>
     </div>
@@ -22,10 +22,10 @@
 </div>
 <div class="email-phone list-group-item clearfix">
 <div class="row">
-    <p><strong>Email:</strong> {{ contact.email }}</p>
+    <p><strong>Email:</strong> {{ contact?.email }}</p>
 </div>
 <div class="row">
-    <p><strong>Phone:</strong> {{ contact.phone }}</p>
+    <p><strong>Phone:</strong> {{ contact?.phone }}</p>
 </div>
 </div>
 
