--- a/cms/src/app/documents/document-detail/document-detail.component.html
+++ b/cms/src/app/documents/document-detail/document-detail.component.html
@@ -5,7 +5,7 @@
         <div class="row pull-right margin-left-right">
           <a (click) = onView() class="btn btn-primary">View</a>
           <a [routerLink]="['edit']" class="btn btn-info" >Edit</a>
-          <a class="btn btn-danger">Delete</a>
+          <a (click)= onDelete() class="btn btn-danger">Delete</a>
         </div>
       </div>
     </div>
