--- a/cms/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/cms/src/app/contacts/contact-detail/contact-detail.component.html
@@ -14,7 +14,8 @@
         <div class="row">
             <div class="col-xs-12">
                 <a [routerLink]="['edit']" class="btn btn-primary" type="submit">Edit</a>
-                <a (click)= onDelete() class="btn btn-danger" type="submit">Delete</a>
+                <a  class="btn btn-danger" type="submit">Delete</a>
+                <!-- (click)= onDelete() -->
             </div>
         </div>
     </div>
