--- a/recipebook/src/app/shopping-list/shopping-list.component.html
+++ b/recipebook/src/app/shopping-list/shopping-list.component.html
@@ -8,7 +8,7 @@
             class="list-group-item" 
             style="cursor: pointer"
             *ngFor="let ingredient of ingredients; let i = index"
-            (click)="onEditItem()"
+            (click)="onEditItem(i)"
             >
             {{ ingredient.name }} ({{ ingredient.amount }})
         </a>
