--- a/recipebook/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/recipebook/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <form>
+        <form [formGroup]="recipeForm" (ngSubmit)= "onSubmit()">
             <div class="row">
                 <div class="col-xs-12">
                     <button type="submit" class="btn btn-success">Save</button>
@@ -14,6 +14,7 @@
                         <input 
                         type="text" 
                         id="name"
+                        formControlName="name"
                         class="form-control">
                     </div>
                 </div>
@@ -25,11 +26,12 @@
                         <input 
                         type="text" 
                         id="imagePath"
+                        formControlName="imagePath"
                         class="form-control">
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-xs-12">
                     <div class="form-group">
                         <label for="name">Name</label>
@@ -39,7 +41,7 @@
                         class="form-control">
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="row">
                 <div class="col-xs-12">
                     <img src="" class="img-responsive">
@@ -52,7 +54,9 @@
                         <textarea 
                         type="text" 
                         id="description"
-                        class="form-control" rows="6"></textarea>
+                        class="form-control"
+                        formControlName="description"
+                        rows="6"></textarea>
                     </div>
                 </div>
             </div>
