--- a/recipebook/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/recipebook/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -30,7 +30,8 @@
                         type="text" 
                         id="imagePath"
                         formControlName="imagePath"
-                        class="form-control">
+                        class="form-control"
+                        #imagePath>
                     </div>
                 </div>
             </div>
@@ -47,7 +48,7 @@
             </div> -->
             <div class="row">
                 <div class="col-xs-12">
-                    <img src="" class="img-responsive">
+                    <img [src]="imagePath.value" class="img-responsive">
                 </div>
             </div>
             <div class="row">
