--- a/cms/src/app/documents/documents-edit/documents-edit.component.html
+++ b/cms/src/app/documents/documents-edit/documents-edit.component.html
@@ -1,1 +1,50 @@
-<p>documents-edit works!</p>
+<div class="panel panel-default">
+    <div class="panel-body">
+  
+      <form id="document-edit">
+        <div class="row">
+  
+          <div class="col-sm-12 form-group">
+            <label for="name">Document title</label>
+            <input
+              type="text"
+              id="name"
+              class="form-control"
+              size="120"
+              max="120">
+          </div>
+  
+          <div class="col-sm-12 form-group">
+            <label for="description">Document description</label>
+            <input
+              type="text"
+              id="description"
+              class="form-control"
+              size="120"
+              max="255">
+          </div>
+  
+          <div class="col-sm-12 form-group">
+            <label for="documentUrl">Document URL</label>
+            <input
+              type="text"
+              id="documentUrl"
+              class="form-control"
+              size="150"
+              max="255">
+          </div>
+        </div>
+  
+  
+        <div class="row">
+          <div class="col-xs-12">
+            <button class="btn btn-success" type="submit" >Save</button>
+            <button class="btn btn-primary" type="button" (click)="onCancel()">Cancel</button>
+          </div>
+        </div>
+  
+      </form>
+  
+    </div>
+  </div>
+  
