says no error but form won't appear

--- a/cms/src/app/contacts/contact-edit/contact-edit.component.html
+++ b/cms/src/app/contacts/contact-edit/contact-edit.component.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<!-- <div class="panel panel-default">
     <div class="panel-body">
       <form id="contact-edit">
         <div class="row">
@@ -71,4 +71,4 @@
   
       </form>
     </div>
-  </div>
+  </div> -->
