--- a/cms/src/app/documents/documents-edit/documents-edit.component.html
+++ b/cms/src/app/documents/documents-edit/documents-edit.component.html
@@ -1,9 +1,9 @@
 <div class="panel panel-default">
     <div class="panel-body">
-  
+      <!--  -->
       <form id="document-edit" (ngSubmit)="onSubmit(f)" #f="ngForm">
         <div class="row">
-  
+         
           <div class="col-sm-12 form-group">
             <label for="name">Document title</label>
             <input
@@ -11,7 +11,7 @@
               id="name"
               name="name"
               required
-              #name = "ngForm"
+              #name = "ngModel"
               [ngModel]=document?.name
               class="form-control"
               size="120"
@@ -29,14 +29,14 @@
               size="120"
               max="255">
           </div>
-  
+          
           <div class="col-sm-12 form-group">
             <label for="documentUrl">Document URL</label>
             <input
               type="text"
               id="documentUrl"
               name="documentUrl"
-              #documentUrl = "ngForm" 
+              #documentUrl = "ngModel"
             [ngModel]=document?.url
               required
               class="form-control"
@@ -49,6 +49,7 @@
 
         <div class="row">
           <div class="col-xs-12">
+            <!--  -->
             <button class="btn btn-success" type="submit" [disabled]="!f.valid">Save</button>
             <button class="btn btn-primary" type="button" (click)="onCancel()">Cancel</button>
           </div>
