--- a/cms/src/app/documents/documents-edit/documents-edit.component.html
+++ b/cms/src/app/documents/documents-edit/documents-edit.component.html
@@ -44,8 +44,8 @@
               max="255">
           </div>
         </div>
-  
-        <div class="alert alert-danger" ngIf="!name.valid, !documentUrl.valid">The Document title and URL are required fields</div>
+        <!-- ngIf="!name.valid, !documentUrl.valid" -->
+        <div class="alert alert-danger">The Document title and URL are required fields</div>
 
         <div class="row">
           <div class="col-xs-12">
