moved on still have problems I don't understand

--- a/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -11,6 +11,7 @@
         <cms-contact-item 
         *ngFor="let contact of contacts"
         [contact]="contact"
+        dnddraggable [dragEnabled]="true" [dragData]="contact" [dropZones]="['contactGroup']"
         ></cms-contact-item>
         <!-- <a href="#" class="list-group-item clearfix" 
         *ngFor="let contact of contacts">
