--- a/cms/src/app/documents/documents-edit/documents-edit.component.html
+++ b/cms/src/app/documents/documents-edit/documents-edit.component.html
@@ -44,7 +44,7 @@
               max="255">
           </div>
         </div>
-        <!-- ngIf="!name.valid, !documentUrl.valid" -->
+        <!-- ngIf="!name.valid || !documentUrl.valid" -->
         <div class="alert alert-danger">The Document title and URL are required fields</div>
 
         <div class="row">
