--- a/cms/src/app/contacts/contact-edit/contact-edit.component.html
+++ b/cms/src/app/contacts/contact-edit/contact-edit.component.html
@@ -1,12 +1,15 @@
-<!-- <div class="panel panel-default">
+<div class="panel panel-default">
     <div class="panel-body">
-      <form id="contact-edit">
+      <form id="contact-edit" (ngSubmit)="onSubmit(f)" #f="ngForm">
         <div class="row">
           <div class="col-sm-12 form-group">
             <label for="name">Name</label>
             <input
               type="text"
               id="name"
+              name="name"
+              #name = "ngModel"
+              [ngModel]=contact?.name
               class="form-control required"
               size="120"
               max="120">
@@ -15,40 +18,57 @@
           <div class="col-sm-12 form-group">
             <label for="email">Email</label>
             <input
-              type="text"
+              type="email"
               id="email"
+              name="email"
+              required
+              pattern=“[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$”
+              #email = "ngModel"
+              [ngModel]=contact?.email
               class="form-control required"
               size="120"
               max="255">
           </div>
+          <div class="alert alert-danger">Enter a valid Email address.</div>
   
           <div class="col-sm-12 form-group">
             <label for="phone">Phone</label>
             <input
               type="text"
               id="phone"
+              name="phone"
+              #phone = "ngModel"
+              pattern=“\D*([2-9]\d{2})(\D*)([2-9]\d{2})(\D*)(\d{4})\D*" 
+              [ngModel]=contact?.phone
               class="form-control invalid"
               size="150"
               max="255">
   
           </div>
+          <div class="alert alert-danger">Enter a valid phone number.</div>
   
           <div class="col-sm-12 form-group">
             <label for="imageUrl">Image URL</label>
             <input
               type="text"
               id="imageUrl"
+              name="imageUrl"
+              #imageUrl = "ngModel"
+              [ngModel]=contact?.imageUrl
               class="form-control"
               size="150"
               max="255">
           </div>
         </div>
+
+        <div class="alert alert-danger">The Name and Email are required.</div>
   
         <div class="form-group">
           <label for="groupList">Group contacts</label>
   
           <div class="row" id="groupList"
-               style="min-height: 3rem;" >
+               style="min-height: 3rem;" 
+               dnd-droppable [dropZones]="['contactGroup']" (onDropSucess)="addToGroup($event)">
   
             <div *ngFor="let contact of groupContacts; let i = index">
               <div>
@@ -64,11 +84,11 @@
   
         <div class="row">
           <div class="col-xs-12">
-            <button class="btn btn-success" type="submit">Save</button>
+            <button class="btn btn-success" type="submit" [disabled]="!f.valid">Save</button>
             <button class="btn btn-primary" type="button" (click)="onCancel()">Cancel</button>
           </div>
         </div>
   
       </form>
     </div>
-  </div> -->
+  </div>
