problems with drag and drop

--- a/cms/src/app/contacts/contact-edit/contact-edit.component.html
+++ b/cms/src/app/contacts/contact-edit/contact-edit.component.html
@@ -38,7 +38,7 @@
               id="phone"
               name="phone"
               #phone = "ngModel"
-              pattern=“\D*([2-9]\d{2})(\D*)([2-9]\d{2})(\D*)(\d{4})\D*" 
+              pattern="\D*([2-9]\d{2})(\D*)([2-9]\d{2})(\D*)(\d{4})\D*"
               [ngModel]=contact?.phone
               class="form-control invalid"
               size="150"
