--- a/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="align-middle col-xs-12">
         <h2 class="list-group-item-heading pull-left">Contacts</h2>
-            <button class="btn btn-success pull-right">New Contact</button>
+            <button routerLink="new" class="btn btn-success pull-right">New Contact</button>
     </div>
 </div>
 </div>
