Create Angular pipe to filter out the contacts

--- a/cms/src/app/contacts/contact-edit/contact-edit.component.html
+++ b/cms/src/app/contacts/contact-edit/contact-edit.component.html
@@ -69,7 +69,7 @@
   
           <div class="row" id="groupList"
                style="min-height: 3rem;" 
-               dnd-droppable [dropZones]="['contactGroup']" (onDropSucess)="addToGroup($event)">
+               dnd-droppable [dropZones]="['contactGroup']" (onDropSuccess)="addToGroup($event)">
   
             <div *ngFor="let contact of groupContacts; let i = index">
               <div>
