--- a/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -1,15 +1,40 @@
 <div class="list-group-item clearfix">
-<div class="row">
+<!-- <div class="row">
     <div class="align-middle col-xs-12">
         <h2 class="list-group-item-heading pull-left">Contacts</h2>
             <button routerLink="new" class="btn btn-success pull-right">New Contact</button>
     </div>
-</div>
+</div> -->
+
+<div class="panel-heading">
+    <div class="row">
+      <span class="title pad-left-right">Contacts</span>
+    </div>
+    <div class="row">
+      <div class="input-group pull-left pad-left-right col-xs-7">
+        
+       <input 
+       type="text"
+       #searchBox
+       (keyup)="onKeyPress(searchBox.value)"
+       class="form-control"
+       placeholder="Enter a search value"
+       >
+
+        <div class="glyphicon glyphicon glyphicon-search input-group-addon" 
+        (click)="onKeyPress(searchBox.value)"></div>
+      </div>
+      <div class="pull-right pad-left-right">
+        <a class="btn btn-success" [routerLink]="['new']">New Contact</a>
+      </div>
+    </div>
+  </div>
+
 </div>
 <div class="row">
     <div class="col-xs-12">
         <cms-contact-item 
-        *ngFor="let contact of contacts"
+        *ngFor="let contact of contacts | contactsFilter:term"
         [contact]="contact"
         dnd-draggable [dragEnabled]="true" [dragData]="contact" [dropZones]="['contactGroup']"
         ></cms-contact-item>
