no errors, but no list showing

--- a/FinalProject/src/app/app.component.html
+++ b/FinalProject/src/app/app.component.html
@@ -1,6 +1,6 @@
-<cms-header></cms-header>
+<app-header></app-header>
 <div class="container pull-left">
-  <router-outlet></router-outlet>
+  <app-pokemon></app-pokemon>
     <div class="row">
       <div class="col-md-12">
         <!-- <cms-documents *ngIf="selectedFeature === 'documents'"></cms-documents>
