--- a/FinalProject/src/app/pokemon/pokemon-list/pokemon-list.component.html
+++ b/FinalProject/src/app/pokemon/pokemon-list/pokemon-list.component.html
@@ -8,9 +8,9 @@
     
     <div class="panel-heading">
         <div class="row">
-          <span class="title pad-left-right">Pokemon I've Used</span>
+          <span class="title pad-left-right" style="font-size: large;"><b>Pokemon I've Used</b></span>
         </div>
-        <div class="row">
+        <div class="row" style="margin-top: 1em;">
           <div class="input-group pull-left pad-left-right col-xs-7">
             
            <input 
