--- a/FinalProject/src/app/app.component.html
+++ b/FinalProject/src/app/app.component.html
@@ -1,12 +1,4 @@
 <app-header></app-header>
 <div class="container pull-left">
-  <app-pokemon></app-pokemon>
-    <div class="row">
-      <div class="col-md-12">
-        <!-- <cms-documents *ngIf="selectedFeature === 'documents'"></cms-documents>
-        <cms-message-list *ngIf="selectedFeature === 'messages'"></cms-message-list>
-        <cms-contacts *ngIf="selectedFeature ==='contacts'"></cms-contacts> -->
-      </div>
-    </div>
-    
+  <router-outlet></router-outlet>  
   </div>
