data is here but editting not working

--- a/FinalProject/src/app/pokemon/pokemon-detail/pokemon-detail.component.html
+++ b/FinalProject/src/app/pokemon/pokemon-detail/pokemon-detail.component.html
@@ -1,7 +1,7 @@
 <div class="top-contact-detail list-group-item clearfix">
     <div class="row">
         <div class="col-xs-12">
-            <h2>{{ pokemon.name }}</h2>
+            <h2>{{ pokemon?.name }}</h2>
         </div>
     </div>
     <div class="row">
@@ -26,7 +26,7 @@
         <p><strong>Nickname:</strong> {{ pokemon?.nickname }}</p>
     </div>
     <div class="row">
-        <p><strong>Gender:</strong> {{ pokemon?.type }}</p>
+        <p><strong>Type:</strong> {{ pokemon?.type }}</p>
     </div>
     </div>
     
