--- a/FinalProject/src/app/pokemon/pokemon-item/pokemon-item.component.html
+++ b/FinalProject/src/app/pokemon/pokemon-item/pokemon-item.component.html
@@ -1,11 +1,11 @@
-<a routerLinkActive="active" [routerLink]=[pokemon.id] class="list-group-item clearfix" 
+<a routerLinkActive="active" [routerLink]="[pokemon?.id]" class="list-group-item clearfix" 
         >
             <div class="pull-left">
-                <h4 class="list-group-item-heading">{{ pokemon.name }}</h4>
+                <h4 class="list-group-item-heading">{{ pokemon?.name }}</h4>
             </div>
             <span class="pull-right">
-                <img src="{{ pokemon.imageUrl }}" 
-                alt="{{ pokemon.name }}" 
+                <img src="{{ pokemon?.imageUrl }}" 
+                alt="{{ pokemon?.name }}" 
                 class="img-responsive" 
                 style="max-height: 50px;">           
             </span>
